# shapebench

./: .gitignore  README.md  baseline_methods_evaluation_March17_2026.txt  bayesian_optimization_implementation_plan_March24_2026.txt  benchmark_5csvs.py  lbfgsb_failure_analysis_April2026.txt  lbfgsb_gradient_descent_discussion_March17_2026.txt  pso_ga_failure_analysis_April2026.txt  resume_benchmark_neuralfoil.py  run_benchmark.py  run_job.sh  smoke_test_precision.py  test_fenics_simple.py  v3_flash2_5_infeasibility_analysis_April2026.txt
NTop/: readme
Test_Time_Discovery/discover/: .gitignore  MANIFEST.in  README.md  pyproject.toml
Test_Time_Discovery/discover/docs/: api.md  intro.md
Test_Time_Discovery/discover/examples/ac_inequalities/: env.py
Test_Time_Discovery/discover/examples/ahc/: env.py  get_cache.sh  prompt.py  setup.md
Test_Time_Discovery/discover/examples/circle_packing/: env.py  submitit_launch.sh
Test_Time_Discovery/discover/examples/denoising/: env.py
Test_Time_Discovery/discover/examples/erdos_min_overlap/: env.py
Test_Time_Discovery/discover/examples/gpu_mode/: env.py
Test_Time_Discovery/discover/ttt_discover/: __init__.py  discovery.py
Test_Time_Discovery/discover/ttt_discover/environments/: sandbox_reward_evaluator.py
Test_Time_Discovery/discover/ttt_discover/rl/: data_processing.py  metric_util.py  rollouts.py  train.py  types.py
Test_Time_Discovery/discover/ttt_discover/tinker_utils/: best_sequence_utils.py  completers.py  dataset_builder.py  logtree.py  misc_utils.py  ml_log.py  renderers.py  sampler.py  state.py  trace.py
(+10726 files in other folders)
